# onec-containers

./: .containerignore  .dclintrc  .dockerignore  .envrc.example  .gitattributes  .gitignore  .hadolint.yaml  .onec.env.bat.example  .onec.env.example  .pre-commit-config.yaml  AGENTS.md  LICENSE  Layers.md  Makefile  README.md  bake  bake-select.py  bake.py  build-base-k8s-jenkins-agent.sh  build-base-k8s-jenkins-coverage-agent.sh  build-base-swarm-jenkins-agent.bat  build-base-swarm-jenkins-agent.sh  build-base-swarm-jenkins-coverage-agent.sh  build-client-toolbox.sh  build-crs.sh  build-edt-k8s-agent.sh  build-edt-swarm-agent.bat  build-edt-swarm-agent.sh  build-edt-toolbox.sh  build-edt.bat  build-edt.sh  build-executor.sh  build-installer.sh  build-oscript-k8s-agent.sh  build-oscript-swarm-agent.bat  build-oscript-swarm-agent.sh  build-server.sh  compose.dev.yaml  compose.yaml  cosign.pub  (+6 more)
.devcontainer/: Containerfile  compose.yaml  devcontainer-lock.json  devcontainer.json  initialize.sh  postCreate.sh
bake/: 10-toolchain.hcl  20-platform.hcl  30-edt.hcl  40-vnc-chain.hcl  50-agents.hcl  60-misc.hcl  __init__.py  cli.py  common.hcl  groups.hcl  select.py  versions.hcl
bakery/: AGENTS.md  __init__.py  buildx.py  common.hcl  groups.hcl  main.py  plan.py  select.py  versions.hcl
build_support/: helpers.py
client/: BUILD  Containerfile  Dockerfile  bake.hcl  packages.txt
client-toolbox/: Containerfile  Dockerfile
client-vnc/: Containerfile  Dockerfile  bake.hcl
coverage41C/: Containerfile  Dockerfile  bake.hcl
crs-apache/: BUILD  Containerfile  Dockerfile  (+2 more)
(+122 files in other folders)
